[package]
name = "benches"
version = "0.0.0"
description = "Criteration benchmarks of the sponges crates"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dev-dependencies]
ascon = { path = "../ascon" }
criterion = "0.7"

[[bench]]
name = "ascon"
path = "src/ascon.rs"
harness = false
