[package]
name = "keccak"
version = "0.2.0-rc.1"
description = """
Pure Rust implementation of the Keccak sponge function including the keccak-f
and keccak-p variants
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/keccak"
homepage = "https://github.com/RustCrypto/sponges/tree/master/keccak"
repository = "https://github.com/RustCrypto/sponges"
keywords = ["crypto", "sponge", "keccak", "keccak-f", "keccak-p"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[features]
asm = []       # Use optimized assembly when available (currently only ARMv8)
no_unroll = [] # Do no unroll loops for binary size reduction
simd = []      # Use core::simd (nightly-only)

[target.'cfg(target_arch = "aarch64")'.dependencies]
cpufeatures = "0.2"
